--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "ng2-semantic-ui": "^0.9.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "querystringify": ">=2.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
