--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
     "@types/jwt-decode": "^2.2.1",
+    "chart.js": "^2.8.0",
     "express": "^4.17.1",
     "jwt-decode": "^2.2.0",
+    "ng2-charts": "^2.3.0",
     "ng2-semantic-ui": "^0.9.7",
     "ngx-toastr": "^10.0.4",
     "path": "^0.12.7",
