--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.900.0-rc.0",
     "@angular/animations": "^9.0.0-rc.0",
+    "@angular/cli": "^9.0.0-rc.0",
     "@angular/common": "^9.0.0-rc.0",
     "@angular/compiler": "^9.0.0-rc.0",
+    "@angular/compiler-cli": "^9.0.0-rc.0",
     "@angular/core": "^9.0.0-rc.0",
     "@angular/forms": "^9.0.0-rc.0",
+    "@angular/language-service": "^9.0.0-rc.0",
     "@angular/platform-browser": "^9.0.0-rc.0",
     "@angular/platform-browser-dynamic": "^9.0.0-rc.0",
     "@angular/router": "^9.0.0-rc.0",
@@ -34,41 +38,38 @@
     "@coreui/coreui": "^2.1.16",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
     "@coreui/icons": "0.3.0",
-    "bootstrap": "^4.3.1",
-    "chart.js": "^2.9.2",
-    "core-js": "^2.6.10",
-    "flag-icon-css": "^3.4.5",
-    "font-awesome": "^4.7.0",
-    "moment": "^2.24.0",
-    "mutationobserver-shim": "^0.3.3",
-    "ng2-charts": "^2.3.0",
-    "ngx-bootstrap": "^5.2.0",
-    "ngx-perfect-scrollbar": "^8.0.0",
-    "rxjs": "^6.5.3",
-    "simple-line-icons": "^2.4.1",
-    "ts-helpers": "^1.1.2",
-    "tslib": "^1.10.0",
-    "web-animations-js": "^2.3.2",
-    "zone.js": "~0.10.2",
-    "@angular-devkit/build-angular": "~0.900.0-rc.0",
-    "@angular/cli": "^9.0.0-rc.0",
-    "@angular/compiler-cli": "^9.0.0-rc.0",
-    "@angular/language-service": "^9.0.0-rc.0",
     "@types/jasmine": "^3.4.5",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.2",
     "codelyzer": "^5.1.2",
+    "core-js": "^2.6.10",
+    "flag-icon-css": "^3.4.5",
+    "font-awesome": "^4.7.0",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "^4.2.1",
+    "jwt-decode": "^2.2.0",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "moment": "^2.24.0",
+    "mutationobserver-shim": "^0.3.3",
+    "ng2-charts": "^2.3.0",
+    "ngx-bootstrap": "^5.2.0",
+    "ngx-perfect-scrollbar": "^8.0.0",
     "protractor": "^5.4.2",
+    "rxjs": "^6.5.3",
+    "simple-line-icons": "^2.4.1",
+    "ts-helpers": "^1.1.2",
     "ts-node": "^8.4.1",
+    "tslib": "^1.10.0",
     "tslint": "^5.20.0",
-    "typescript": "~3.6.4"
+    "typescript": "~3.6.4",
+    "web-animations-js": "^2.3.2",
+    "zone.js": "~0.10.2"
   },
   "engines": {
     "node": ">= 12",
